# Science-Battle-Simulator

./: .gitignore  CMakeLists.txt  Faction Specific Army Rules.xlsx  dice.py  multi_round.py  recorded_scenario.py  scenario.py  wound_allocation.py
archive/python/: combat.py  combat_events.py  combat_state.py  morale.py  multi_round_simulator.py  recorded_combat.py
benchmarks/: benchmark_combat.cpp  benchmark_dice.cpp
docs/: ++ Alien Hives (v3.5.1) [GF 27445pt.txt  Assault_Grunts.final.txt  Blessed_Sisters.final.merged.txt  Blessed_Sisters_pipeline.final.merged.txt  Carnivo-Rex.final.txt  DESIGN_PLAN.md  GF_-_Alien_Hives_3.5.1_units.json  GF_-_Battle_Brothers_3.5.1_units.json  GF_-_Titan_Lords_3.5.1_units.json  Hive_Burrower.final.txt  MERGED_ALL_TXT.bucket_reduced.txt  MERGED_ALL_TXT.txt  Simulator.md  Vassal_Micro-Titan.final.txt  Wolf_Prime_Brothers.final.merged.txt  count_units_by_loadout.py  count_units_to_csv.py  create_effect_based_csv.py  merge_all_factions.py  missing_rules_report.txt  reduce_loadouts_by_bucket.py  reduce_loadouts_by_special_rules_buckets.py  run_opr_pipeline_all_units_v3_mt.py  special_rule_parser.py  special_rules_buckets.xlsx  special_rules_granting_analysis.md  special_rules_review_matrix.md  special_rules_review_matrix.xlsx  special_rules_supergrouping.csv  test_loadout_builder.py  unused_rules_report.txt
docs/parsed_output/: GF_-_Alien_Hives_3.5.1_base_loadouts.txt  GF_-_Alien_Hives_3.5.1_units.csv  GF_-_Alien_Hives_3.5.1_units.json
include/analysis/: result_analyzer.hpp
include/core/: faction_rules.hpp  model.hpp  types.hpp  unit.hpp  weapon.hpp
include/engine/: ai_controller.hpp  combat.hpp  combat_engine.hpp  dice.hpp  faction_combat.hpp  game_runner.hpp  game_state.hpp
include/parser/: unit_parser.hpp
include/pipeline/: opr_pipeline.hpp
include/simulation/: batch_simulator.hpp  chunk_manager.hpp  matchup_sample.hpp  sampling_config.hpp  sampling_simulator.hpp  showcase_replay.hpp  sim_state.hpp  simulator.hpp  statistics.hpp  thread_pool.hpp
results/: simulation_stats.csv  simulation_summary.txt  simulation_top50.txt
scripts/: bucket_reduced_to_json.py  find_missing_rules.py  generate_rules_matrix.py  merge_all_factions.py  parse_pdf_loadouts.py  test_a0_fix.py  test_a0_fix_edge_cases.py  test_a0_fix_extended.py  validate_merged_loadouts.py
src/: analyze_results.cpp  batch_sim.cpp  battle_sim.cpp  benchmark_sim.cpp  chunk_sim.cpp  main.cpp  opr_pipeline_main.cpp  test_game.cpp  test_parser.cpp
src/core/: army_list.cpp  faction_rules.cpp  model.cpp  special_rule.cpp  unit.cpp  weapon.cpp
src/engine/: combat.cpp  dice.cpp  morale.cpp  multi_round.cpp  scenario.cpp  wound_allocation.cpp
src/io/: army_parser.cpp  config_loader.cpp  results_exporter.cpp
src/pipeline/: opr_pipeline.cpp
src/simulation/: batch_processor.cpp  simulator.cpp  statistics.cpp  thread_pool.cpp
src/utils/: memory_pool.cpp  progress.cpp  timer.cpp
tests/: test_combat.cpp  test_dice.cpp  test_scenarios.cpp  test_validation.cpp
tools/: elo_from_samples.py
